fix(TxFeed): alignment and overlap

--- a/assets/css/modules/_transaction-list.scss
+++ b/assets/css/modules/_transaction-list.scss
@@ -46,9 +46,6 @@
       position: absolute;
       height: calc(100% - 10px);
     }
-    .tx-details {
-      margin-left: 3em;
-    }
     button.amount {
       padding: 10px;
       min-width: 125px;
