--- a/assets/css/utilities/_general.scss
+++ b/assets/css/utilities/_general.scss
@@ -62,3 +62,9 @@ noscript {
     margin-bottom: 3em;
   }
 }
+
+.lh1 { line-height: 1; }
+
+.ph-form { padding: 0 2em; }
+
+.mw { max-width: 100%; }
