--- a/assets/css/utilities/_spacing.scss
+++ b/assets/css/utilities/_spacing.scss
@@ -99,9 +99,3 @@
 .mlvl, .mhvl, .mavl { margin-left: 3em; }
 
 .mll, .mhl, .mal { margin-left: 1.25em; }
-
-.lh1 { line-height: 1; }
-
-.ph-form { padding: 0 2em; }
-
-.mw { max-width: 100%; }
